--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 certifi==2019.3.9
 chardet==3.0.4
 cssselect2==0.2.1
+fire==0.1.3
 idna==2.8
 lxml==4.3.3
 numpy==1.16.3
 opencv-python==4.1.0.25
+pandas==0.24.2
 Pillow==6.0.0
+python-dateutil==2.8.0
+pytz==2019.1
 reportlab==3.5.21
 requests==2.21.0
+scipy==1.2.1
+six==1.12.0
 svglib==0.9.0
 tinycss2==1.0.2
 urllib3==1.24.3
